# mobile_STERO-18Z-Winnicki-Sikora

./: .gitignore  CMakeLists.txt  package.xml  setup_elektron_only_workspace.sh  setup_gazebo_elektron_workspaces.sh
bag/matlab/: bag_analyzer.m
config/: elektron_NoTower_control.yaml  elektron_Tower_control.yaml
config/.robots/: elektron_Laser_Tower-kinect.urdf.xacro  elektron_Laser_Tower-rgb.urdf.xacro
elektron_description/: CMakeLists.txt  package.xml
elektron_description/maps/: korytarz_bez_drzwi.pgm  korytarz_bez_drzwi.yaml  korytarz_niesym.pgm  korytarz_niesym.yaml  korytarz_sym.pgm  korytarz_sym.yaml
elektron_description/meshes/base/: elektron_body.3ds  elektron_body.dae  tower.3ds  tower.blend  tower.blend1  tower.blend2  tower.dae
elektron_description/meshes/sensors/head_camera/: Camera Polycom Eagleeye III web camera N250316.3DS  head_camera.dae  scaled_camera.3ds  scaled_camera.dae
elektron_description/robots/: elektron_Laser_NoTower.urdf.xacro  elektron_Laser_Tower-kinect.urdf.xacro  elektron_Laser_Tower-rgb.urdf.xacro  elektron_NoLaser_NoTower.urdf.xacro  elektron_NoLaser_Tower-kinect.urdf.xacro  elektron_NoLaser_Tower-rgb.urdf.xacro
elektron_description/urdf/: elektron_gazebo.urdf.xacro  elektron_properties.urdf.xacro
elektron_description/urdf/sensors/: kinect.urdf.xacro  kinect_gazebo.urdf.xacro  rgb_camera.urdf.xacro  sick_laser_lmx_100.urdf
elektron_description/urdf/tower/: tower.urdf.xacro
launch/: elektron_NoTower_control.launch.xml  elektron_Tower_control.launch.xml  elektron_laser.launch  elektron_plan.launch  elektron_planificacion.launch  elektron_world.launch
launch/includes/: elektron.launch.xml
map_scan/: scanned_map.yaml
params/: global_mapa_de_costos.yaml  local_mapa_de_costos.yaml  local_planificador.yaml
report/: Sprawozdanie.aux  Sprawozdanie.fdb_latexmk  Sprawozdanie.fls  Sprawozdanie.out  Sprawozdanie.tex  Sprawozdanie.toc
scripts/: marcador_de_objetivo.py  normalmente_movimiento.py  odometria_movimiento.py  planonador.py  posicionador.py  probador_de_errores.py  square_test
src/: maldito_planificador_local.cpp
srv/: STPT.srv
worlds/: doors_asym.world  kondziu.world  lab5_world  lab_2_world.world
worlds/lab2_nasze/: model.config  model.sdf
